Remove jdk9 deprecation