@@ -2,6 +2,7 @@ package org.ironrhino.core.struts.converter;
 
 import java.io.File;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Member;
 import java.nio.file.Path;
 import java.util.Collection;
@@ -33,10 +34,11 @@ public class MyXWorkConverter extends XWorkConverter {
 				return null;
 			Object entity;
 			try {
-				entity = toClass.newInstance();
+				entity = toClass.getConstructor().newInstance();
 				BeanUtils.setPropertyValue(entity, "id", id);
 				return entity;
-			} catch (InstantiationException | IllegalAccessException e) {
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			}
 		} else if ((Collection.class.isAssignableFrom(toClass) || toClass.isArray()) && value instanceof String[]
 				&& target != null) {
