@@ -7,7 +7,7 @@ import org.apache.struts2.util.StrutsTypeConverter;
 import org.ironrhino.core.model.Persistable;
 import org.springframework.beans.BeanWrapperImpl;
 
-@SuppressWarnings("rawtypes")
+@SuppressWarnings({ "unchecked", "rawtypes" })
 public class PersistableConverter extends StrutsTypeConverter {
 
 	@Override
@@ -15,7 +15,7 @@ public class PersistableConverter extends StrutsTypeConverter {
 		if (values[0] == null || values[0].trim().equals(""))
 			return null;
 		try {
-			Persistable<?> persistable = (Persistable<?>) toClass.newInstance();
+			Persistable<?> persistable = (Persistable<?>) toClass.getConstructor().newInstance();
 			BeanWrapperImpl bw = new BeanWrapperImpl(persistable);
 			bw.setPropertyValue("id", values[0].trim());
 			return persistable;
