@@ -3,6 +3,7 @@ package org.ironrhino.core.util;
 import java.beans.PropertyDescriptor;
 import java.io.Serializable;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -108,7 +109,7 @@ public class BeanUtils {
 			throw new IllegalArgumentException("source object self must be accepted if you specify a filter");
 		T ret = null;
 		try {
-			ret = (T) source.getClass().newInstance();
+			ret = (T) source.getClass().getConstructor().newInstance();
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
@@ -128,7 +129,7 @@ public class BeanUtils {
 
 	public static Object convert(Class<?> beanClass, String propertyName, String value) {
 		try {
-			return convert(beanClass.newInstance(), propertyName, value);
+			return convert(beanClass.getConstructor().newInstance(), propertyName, value);
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
@@ -269,10 +270,11 @@ public class BeanUtils {
 				if (t == null)
 					return null;
 				try {
-					T target = targetClass.newInstance();
+					T target = targetClass.getConstructor().newInstance();
 					copyProperties(t, target, false);
 					return target;
-				} catch (InstantiationException | IllegalAccessException e) {
+				} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+						| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 					throw new RuntimeException(e);
 				}
 			}
@@ -289,10 +291,11 @@ public class BeanUtils {
 				List<T> list = new ArrayList<>(t.size());
 				t.forEach(e -> {
 					try {
-						T target = targetClass.newInstance();
+						T target = targetClass.getConstructor().newInstance();
 						copyProperties(e, target, false);
 						list.add(target);
-					} catch (InstantiationException | IllegalAccessException ex) {
+					} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+							| InvocationTargetException | NoSuchMethodException | SecurityException ex) {
 						throw new RuntimeException(ex);
 					}
 				});
